improved error-messages and fixed @MutuallyExclusiveWith